[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tinylm"
version = "0.0.1"
description = "Ever wondered how small you can make a LLM? Look no further, you have found the smol brain model."
authors = [
  { name = "LurkMonolith" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["tinylm"]
include = ["pyproject.toml", "tinylm/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tinylm"]
force-sort-within-sections = true

